--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
     <section id="about">
         <h2>About Ahmed</h2>
         <p>he escaped from his home in syria to escape the president as he wanted to end ahmeds family so he moved to turkey and now to the uk</p>
+        <p>He recently had a fight with rylie robbo and lost cuz hes not him</p>
     </section>
         <section id="dreams">
         <h2>Ahmed's Photos</h2>
